[workspace]
members = [
	"hello-async",
	"timer",
	"a-chat",
	"thread-demo",
	# "greenthreads",
	#"async-basics",
	"testing-mio",
	"tokio-basic",
	"rayon-crossbeam-demo",
	"crossbeam-parallel-pipeline",
	"threadpool-demo",
	"tokio-oneshot-joinhandle",
	"tokio-tcpserver",
	"mio-http",
	"parser-combinator",
	"multi-threaded-http",
        "hello-futures",
        "hello-tokio",
]
