[package]
name = "multi-threaded-http"
version = "0.1.0"
authors = ["ratnadeepb"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
mio = "0.7.4"
log = "0.4.11"
env_logger = "0.8.1"
base64 = "0.13.0"
sha-1 = "0.9.1"
parser-combinators = { git = "https://github.com/sergey-melnychuk/rust-parser-combinators", tag = "0.1.3" }